--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "require-dev": {
         "captainhook/captainhook": "^5.24",
         "phpunit/phpunit": "^10.5.38",
-        "squizlabs/php_codesniffer": "^3.0"
+        "squizlabs/php_codesniffer": "^3.0",
+        "phpstan/phpstan": "^2.0"
     },
     "autoload": {
         "psr-4": {
