--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
     ],
     "scripts": {
         "analyse": "./vendor/bin/phpstan analyse",
+        "lint": "./vendor/bin/phpcs --standard=psr2 src",
         "test": "./vendor/bin/phpunit",
-        "lint": "./vendor/bin/phpcs --standard=psr2 src"
+        "post-autoload-dump": "./vendor/bin/captainhook install -f -s"
     },
     "require": {
         "php": ">=8.1"
