--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     ],
     "scripts": {
         "analyse": "./vendor/bin/phpstan analyse",
-        "lint": "./vendor/bin/phpcs --standard=psr2 src",
+        "lint": "./vendor/bin/phpcs -s src/",
         "test": "./vendor/bin/phpunit",
         "post-autoload-dump": "./vendor/bin/captainhook install -f -s"
     },
